--- a/Opdracht/pom.xml
+++ b/Opdracht/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.vvamp</groupId>
@@ -17,12 +17,6 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-servlet</artifactId>
@@ -64,7 +58,13 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.17.1</version>
     </dependency>
-    <dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>5.11.0-M1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.17.0</version>
@@ -94,5 +94,34 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>com.microsoft.azure</groupId>
+              <artifactId>azure-webapp-maven-plugin</artifactId>
+              <version>2.10.0</version>
+              <configuration>
+                  <schemaVersion>v2</schemaVersion>
+                  <resourceGroup>IngenscheVeer-1717431870030-rg</resourceGroup>
+                  <appName>IngenscheVeer-1717431870030</appName>
+                  <pricingTier>F1</pricingTier>
+                  <region>centralus</region>
+                  <runtime>
+                      <os>Linux</os>
+                      <javaVersion>Java 17</javaVersion>
+                      <webContainer>Tomcat 9.0</webContainer>
+                  </runtime>
+                  <deployment>
+                      <resources>
+                          <resource>
+                              <directory>${project.basedir}/target</directory>
+                              <includes>
+                                  <include>*.war</include>
+                              </includes>
+                          </resource>
+                      </resources>
+                  </deployment>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
