--- a/Opdracht/pom.xml
+++ b/Opdracht/pom.xml
@@ -79,15 +79,12 @@
       <artifactId>tyrus-container-grizzly-client</artifactId>
       <version>1.13.1</version>
     </dependency>
-
       <dependency>
           <groupId>org.glassfish.jersey.media</groupId>
           <artifactId>jersey-media-json-jackson</artifactId>
           <version>2.35</version>
       </dependency>
-
-
-  </dependencies>
+  </dependencies>-
 
   <build>
     <pluginManagement>
