--- a/Opdracht/pom.xml
+++ b/Opdracht/pom.xml
@@ -109,7 +109,7 @@
                     <schemaVersion>v2</schemaVersion>
                     <resourceGroup>IngenscheVeer-1717431870030-rg</resourceGroup>
                     <appName>IngenscheVeer-1717431870030</appName>
-                    <pricingTier>F1</pricingTier>
+                    <pricingTier>B1</pricingTier>
                     <region>centralus</region>
                     <runtime>
                         <os>Linux</os>
